--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 5000
 TWILIO_ACCOUNT_SID =AC0daf3cf7956dd5168aaf3a75a2701015
 TWILIO_AUTH_TOKEN = cee36c9f8782782b3ae44158ed70c956
+MONGO_LINK = mongodb+srv://emiliano_db_user:DNGdWDuAP0ZimHuq@on.8pkxvkz.mongodb.net/?appName=on
