--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "body-parser": "^1.20.3",
         "dotenv": "^8.6.0",
         "express": "^4.21.2",
+        "mongodb": "^6.20.0",
         "node-fetch": "^3.3.2",
         "twilio": "^3.84.1"
     }
