--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "body-parser": "^1.20.3",
         "dotenv": "^8.6.0",
+        "ejs": "^3.1.10",
         "express": "^4.21.2",
         "mongodb": "^6.20.0",
         "node-fetch": "^3.3.2",
