--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.20.3",
+        "cloudinary": "^2.8.0",
         "dotenv": "^8.6.0",
         "ejs": "^3.1.10",
         "express": "^4.21.2",
         "mongodb": "^6.20.0",
+        "mongoose": "^9.0.2",
+        "multer": "^2.0.2",
+        "multer-storage-cloudinary": "^4.0.0",
         "node-fetch": "^3.3.2",
         "twilio": "^3.84.1"
     }
